# ai-trading-signals

./: PRD.md  README.md  prompt.txt  pyproject.toml
signals/: __init__.py  backtest.py  cli.py  data.py  model.py
