[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signals"
version = "0.1.0"
description = "A stock trading signal generator using LightGBM."
authors = [
  { name="Robert Boivin", email="poivronjaune@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.22.0",
    "lightgbm",
    "scikit-learn",
    "click",
    "joblib",
]

[project.scripts]
signals = "signals.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["signals*"]


